<resources>
    <string name="app_name">week1_workbook</string>
    <string name="mood_happy">더없이 행복한 하루였어요</string>
    <string name="titleDescription1">감정우표를 선택해주세요</string>
    <string name="titleDescription2">선택한 감정우표를 기반으로 맞춤형 질문이 배달됩니다</string>
    <string name="title">오늘 하루는 어땠나요?</string>
    <string name="mood_excited">들뜨고 흥분돼요</string>
    <string name="mood_normal">평범한 하루였어요</string>
    <string name="mood_nervous">생각이 많아지고 불안해요</string>
    <string name="mood_angry">부글부글 화가 나요</string>
    <string name="go_back_button">go back button</string>
    <string name="goback">돌아가기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fragmentMsg">프래그먼트 연습</string>
</resources>